# Learning-based-Feature-for-VSLAM

./: .gitignore  LICENSE  README.md
assets/: README.md
datasets/: TUM.sh
datasets/SUN3DCppDownloader/: CMakeLists.txt  README.md  Readme.md  SUN3D.cc  sequences.txt  sun3d.sh
datasets/SUN3DCppDownloader/include/: ThreadPool.h  ThreadPool.hpp
datasets/SUN3DCppDownloader/src/: SUN3D.cc  ThreadPool.cc
datasets/SUN3DGroundtruthOptimizer/: CMakeLists.txt  ExtractSubset.sh  README.md  sequences.txt
datasets/SUN3DGroundtruthOptimizer/include/: BundleAdjustment.hpp  Dataloader.hpp  FrameExtractor.hpp  ICP_BAsolver.hpp  SIFTextractor.hpp  SuperPointInference.hpp
datasets/SUN3DGroundtruthOptimizer/src/: BundleAdjustment.cc  Dataloader.cc  FrameExtractor.cc  GroundtruthOptimizer.cc  ICP_BAsolver.cc  SIFTextractor.cc  SuperPointInference.cc  ThreadPool.cc
datasets/samples_constructor/: Construct.py  DataManipulator.py  PairsExtraction.py  README.md  configuration.yaml  requirements.txt  run_constructor.sh  sequences.txt
datasets/samples_constructor/notebooks/: samples_example.ipynb
training/inference_test/: CMakeLists.txt
training/inference_test/include/: Inference.hpp
training/inference_test/src/: Inference.cc  create_dbow.cc  match.cc
training/notebooks/: GCNv2_latest_version_test.ipynb  GCNv2_model_inspection.ipynb  GCNv2_notlatest_version.ipynb  get_imgpath.ipynb
vslam/ORB_SLAM3/: CMakeLists.txt
vslam/ORB_SLAM3/Examples/Monocular/: KITTI00-02.yaml  KITTI01.yaml  KITTI02.yaml  KITTI03.yaml  KITTI04.yaml  KITTI07.yaml  KITTI08.yaml  TUM1.yaml  mono_euroc  mono_euroc.cc  mono_kitti  mono_tum  mono_tum.cc  mono_tum_vi
vslam/ORB_SLAM3/Examples/Monocular-Inertial/: mono_inertial_euroc  mono_inertial_euroc.cc  mono_inertial_tum_vi.cc
vslam/ORB_SLAM3/Examples/Monocular/results/: KeyFrameTrajectory_kitti00.txt
vslam/ORB_SLAM3/Examples/RGB-D/: rgbd_tum.cc
vslam/ORB_SLAM3/Examples/Stereo/: KITTI00-02.yaml  KITTI03.yaml  stereo_euroc  stereo_euroc.cc  stereo_kitti  stereo_tum_vi.cc
vslam/ORB_SLAM3/Examples/Stereo-Inertial/: stereo_inertial_euroc  stereo_inertial_euroc.cc  stereo_inertial_tum_vi.cc
vslam/ORB_SLAM3/Examples_old/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc  mono_tum_vi.cc
vslam/ORB_SLAM3/Examples_old/Monocular-Inertial/: mono_inertial_euroc.cc  mono_inertial_tum_vi_old
vslam/ORB_SLAM3/Examples_old/RGB-D/: rgbd_tum.cc  rgbd_tum_old
vslam/ORB_SLAM3/Examples_old/Stereo/: stereo_euroc.cc  stereo_euroc_old  stereo_kitti.cc  stereo_tum_vi.cc  stereo_tum_vi_old
vslam/ORB_SLAM3/Examples_old/Stereo-Inertial/: stereo_inertial_euroc.cc  stereo_inertial_euroc_old  stereo_inertial_tum_vi.cc  stereo_inertial_tum_vi_old
vslam/ORB_SLAM3/include/: Inference.hpp  LoopClosing.h  ORBextractor.h  Settings.h
vslam/ORB_SLAM3/src/: Inference.cc  LocalMapping.cc  ORBextractor.cc  ORBmatcher.cc  Settings.cc  System.cc  Tracking.cc
